--- a/WindowsFormsApplicationDemo/packages.config
+++ b/WindowsFormsApplicationDemo/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Lucene.Net" version="3.0.3" targetFramework="net45" />
   <package id="MongoDB.Bson" version="2.4.3" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.4.3" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.4.3" targetFramework="net45" />
+  <package id="PanGu" version="2.3.1.0" targetFramework="net45" />
+  <package id="PanGu.Lucene.Analyzer" version="0.0.2" targetFramework="net45" />
+  <package id="PanGu.Segment" version="0.0.3" targetFramework="net45" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net45" />
 </packages>
