--- a/ntu.xzmcwjzs.WebApp/packages.config
+++ b/ntu.xzmcwjzs.WebApp/packages.config
@@ -6,6 +6,7 @@
   <package id="EntityFramework.zh-Hans" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="Lucene.Net" version="3.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core.zh-Hans" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
@@ -43,6 +44,10 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="PanGu" version="2.3.1.0" targetFramework="net45" />
+  <package id="PanGu.Lucene.Analyzer" version="0.0.2" targetFramework="net45" />
+  <package id="PanGu.Segment" version="0.0.3" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
